docs: update Readme